Bg change and items centered

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P5 BH</title>
 </head>
-<body>
+<body style="place-items: center; background-color: black;">
     <h4>I'm a template!</h4>
+    <script type="module" src="./src/sketch.js"></script>
 </body>
-<script type="module" src="./src/sketch.js"></script>
 </html>
