Add reload 'button'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>P5 BH</title>
 </head>
 <body style="place-items: center; background-color: black;">
-    <h4>I'm a template!</h4>
+    <div>
+        <h4>I'm a template!</h4>
+        <a href="./index.html" type="button" style="color: aqua;">RELOAD</a>
+    </div>
     <script type="module" src="./src/sketch.js"></script>
 </body>
 </html>
