--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <a href="./index.html" type="button" style="color: aqua;">RELOAD</a>
     </div>
     <script type="module" src="./src/sketch.js"></script>
+    <audio src="*"></audio>
 </body>
 </html>
